--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="panel pricing-table">
       <div class="pricing-plan">
-        <img src="icons/icon1.png" alt="" class="pricing-img" />
+        <img src="icons/icon1.png" alt="icon1" class="pricing-img" />
         <h2 class="pricing-header">Personal</h2>
         <ul class="pricing-features">
           <li class="pricing-features-item">Custom domains</li>
@@ -26,19 +26,19 @@
         <a href="#/" class="pricing-button">Sign Up</a>
       </div>
       <div class="pricing-plan">
-        <img src="icons/icon2.png" alt="" class="pricing-img" />
+        <img src="icons/icon2.png" alt="icon2" class="pricing-img" />
         <h2 class="pricing-header">Small Team</h2>
         <ul class="pricing-features">
           <li class="pricing-features-item">Never Sleeps</li>
           <li class="pricing-features-item">
-            multiple workers for more powerful apps
+            Multiple workers for more powerful apps
           </li>
         </ul>
         <span class="pricing-price">$150</span>
         <a href="#/" class="pricing-button is-featured">Free Trial</a>
       </div>
       <div class="pricing-plan">
-        <img src="icons/icon3.png" alt="" class="pricing-img" />
+        <img src="icons/icon3.png" alt="icon3" class="pricing-img" />
         <h2 class="pricing-header">Enterprise</h2>
         <ul class="pricing-features">
           <li class="pricing-features-item">Dedicated</li>
